# safety-gear-vision

./: .gitignore  BUILD_SUMMARY.md  FOLDER_STRUCTURE.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  START_HERE.md  TENSORBOARD_SETUP.md  pyproject.toml  requirements.txt
config/training/: yolov11l.yaml  yolov11m.yaml  yolov11n.yaml  yolov11s.yaml  yolov11x.yaml
docs/: INFERENCE.md  SETUP.md  TENSORBOARD.md  TESTING.md  TRAINING.md  TROUBLESHOOTING.md
scripts/: 00_download_models.py  01_setup_project.py  02_validate_data.py  03_prepare_dataset.py  04_analyze_dataset.py  05_train.py  06_evaluate.py  07_inference.py  08_export_model.py  09_reduce_dataset.py  09_tensorboard.py
src/data/: data_validator.py  dataset_analyzer.py  dataset_splitter.py
src/evaluation/: __init__.py  evaluator.py
src/inference/: predictor.py
src/training/: trainer.py
src/utils/: config_manager.py  file_handler.py  logger.py  model_utils.py
tests/: conftest.py  test_config_manager.py  test_predictor.py  test_trainer.py
